<resources>
    <string name="app_name">EDS云管理</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="share">分享</string>
    <string name="saved">已保存</string>
    <string name="permission_checked">权限已获取，可继续操作</string>
    <string name="permission_unchecked">获取权限失败，拒绝此项操作</string>
    <string name="exit_confirm">确认要退出%1$s？/退出/取消</string>
    <string name="delete_confirm">删除此条记录？/删除/取消</string>
    <string name="current_user">确认要退出当前账号【%1$s】?/退出/取消</string>
    <string name="record_null">记录不存在</string>
    <string name="function_null">该功能待完善</string>
    <string name="login_title">EDS</string>
    <string name="login_sub_title">电力监控云管理平台</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_remember">记住我</string>
    <string name="login_sign_in">登录</string>
    <string name="login_failure">登录失败</string>
    <string name="qr_format">Node:%1$s;Key:%2$s;Type:%3$d;Param:%4$s</string>
    <string name="qr_invalid">无效的二维码</string>
    <string name="qr_menu">二维码</string>
    <string name="qr_login">登录码：</string>
    <string name="qr_valid">临时账户,%1$s前扫码有效</string>
    <string name="qr_go">正在跳转页面……</string>
    <string name="login_phone_number">手机号码</string>
    <string name="login_code">验证码</string>
    <string name="login_code_gain">获取</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_account">账号登录</string>
    <string name="login_phone_unregistered">/该手机号在系统内未注册/取消</string>
    <string name="login_phone_code_error">/验证码错误，请重新输入/重试</string>
    <string name="login_phone_code_timeout">/验证超时，请重新获取验证码/好</string>
    <string name="login_phone_failure">/未加载工程信息，登录失败/取消</string>
    <string name="login_message_send">验证码已发送，请注意查收</string>
    <string name="login_24hour">24小时免验证</string>
    <string name="user_admin_super">超级管理员</string>
    <string name="user_admin">系统管理员</string>
    <string name="user_phone_admin">手机管理员</string>
    <string name="user_phone">普通访客</string>
    <string name="user_phone_temp">临时访客</string>
    <string name="setting_server">服务器</string>
    <string name="setting_project">专案工程</string>
    <string name="setting_node">监控节点</string>
    <string name="setting_language">语言</string>
    <string-array name="setting_languages">
        <item>简体中文</item>
        <item>繁体中文</item>
        <item>English</item>
    </string-array>
    <string name="setting_apply">申请试用</string>
    <string name="setting_email">hawesome.xu@xseec.cn</string>
    <string name="setting_set">保存</string>
    <string name="setting_area">工程站点</string>
    <string name="setting_header">系统头图</string>
    <string name="setting_device">资产编号</string>
    <string name="setting_basic">基本信息</string>
    <string name="setting_user">用户管理</string>
    <string name="setting_energy">能耗设置</string>
    <string name="setting_overview">快捷点</string>
    <string name="setting_limit">/当前用户身份为：【%1$s】, 无法进行自定义操作/取消</string>
    <string name="setting_limit_admin">当前用户无法授权系统管理员</string>
    <string name="main_failure">未加载到工程信息</string>
    <string name="main_exit">退出</string>
    <string name="nav_account">用户：%1$s</string>
    <string name="nav_limit">权限：%1$s</string>
    <string name="nav_overview">主页</string>
    <string name="nav_workorder">运维工单</string>
    <string name="nav_alarm">异常管理</string>
    <string name="nav_action">操作记录</string>
    <string name="nav_report">报表分析</string>
    <string name="nav_energy">能耗查询</string>
    <string name="nav_setting">自定义</string>
    <string name="nav_exit">退出</string>
    <string name="user_phone_name">用户</string>
    <string name="user_phone_number">手机号</string>
    <string-array name="user_level">
        <item>系统管理员</item>
        <item>手机管理员</item>
        <item>普通访客</item>
        <item>临时访客</item>
    </string-array>
    <string name="user_creator">创建</string>
    <string name="user_update">修改</string>
    <string name="user_created_number">已创建用户数：%1$s</string>
    <string name="user_limit_number">最多创建：%1$s</string>
    <string name="user_created">/该手机号已经注册，请重新输入/好</string>
    <string name="user_number_format">手机号格式不正确，请重新输入</string>
    <string name="user_create_confirm">创建:%1$s新用户?/创建/取消</string>
    <string name="user_modify_confirm">对：%1$s用户进行修改?/修改/取消</string>
    <string name="user_delete_confirm">删除：%1$s用户？/删除/取消</string>
    <string name="user_fill">/当前用户注册数量已满，无法注册新用户/好</string>
    <string name="user_saved"></string>
    <string name="overview_area">厦门士林厂</string>
    <string name="overview_update">更新: %1$s</string>
    <string-array name="overview_status">
        <item>正常</item>
        <item>异常</item>
        <item>离线</item>
    </string-array>
    <string name="overview_device">管理设备</string>
    <string name="overview_grid">系统图库</string>
    <string name="overview_engineer">维护人员</string>
    <string name="overview_location">位置</string>
    <string name="overview_device_value">%1$d 台</string>
    <string name="overview_item_tempreture">环境温度</string>
    <string name="overview_item_apparent_power">视在功率</string>
    <string name="overview_item_activie_power">有功功率</string>
    <string name="overview_item_reactive_power">无功功率</string>
    <string name="overview_item_energy">系统用电</string>
    <string name="overview_item_harmonic">谐波监测</string>
    <string name="overview_item_detail">查看详情</string>
    <string name="overview_state_on">运行</string>
    <string name="overview_state_off">切断</string>
    <string name="overview_state_alarm">异常</string>
    <string name="overview_state_trip">脱扣</string>
    <string name="overview_state_offline">离线</string>
    <string name="overview_map_error">未找到地图APP</string>
    <string name="overview_devices_normal">无异常设备</string>
    <string name="detail_trend">运行趋势</string>
    <string name="detail_max">最大值</string>
    <string name="detail_min">最小值</string>
    <string name="detail_avg">平均值</string>
    <string name="detail_start">起始时间</string>
    <string name="detail_end">截止时间</string>
    <string name="detail_interval">间隔时间</string>
    <string name="detail_record">资料笔数</string>
    <string name="detail_data_type">数据类型</string>
    <string name="detail_time_null">默认</string>
    <string name="detail_time_min">分</string>
    <string name="detail_time_hour">时</string>
    <string name="detail_time_day">日</string>
    <string name="detail_time_month">月</string>
    <string-array name="detail_units">
        <item>秒</item>
        <item>分</item>
        <item>时</item>
        <item>日</item>
    </string-array>
    <string-array name="detail_types">
        <item>最后值</item>
        <item>最大值</item>
        <item>最小值</item>
        <item>平均值</item>
    </string-array>
    <string name="detail_setting">查询</string>
    <string name="detail_menu_config">设置</string>
    <string name="detail_menu_time">时间</string>
    <string name="detail_today">今日能耗</string>
    <string name="detail_yesterday">昨日能耗</string>
    <string name="detail_yesterday_same">昨日同期</string>
    <string name="detail_link_ratio">环比</string>
    <string name="detail_thd_v">电压谐波失真(%基波)</string>
    <string name="detail_thd_c">电流谐波失真(%基波)</string>
    <string name="detail_title">设备列表</string>
    <string name="detail_title_error">异常设备</string>
    <string name="detail_state">状态: %1$s</string>
    <string name="detail_range_error">起始时间不能晚于截止时间</string>
    <string name="detail_endtime_error">自动校正超出的截止时间</string>
    <string name="detail_range_month">自动配对月查询模式</string>
    <string name="detail_percision_hight">高精度模式</string>
    <string name="detail_percision_low">低精度模式</string>
    <string name="device_state">状态</string>
    <string name="device_record">运行记录</string>
    <string name="device_demand">需量%%Ir(Ir=%1$sA)</string>
    <string name="device_trip_time">%1$s-%2$s-%3$s %4$s:%5$s:%6$s</string>
    <string name="device_current">电流(A)</string>
    <string name="device_voltage">电压(V)</string>
    <string name="device_grid">电网</string>
    <string name="device_power">功率</string>
    <string name="device_energy">电能</string>
    <string name="device_long">过载保护</string>
    <string name="device_short">短路保护</string>
    <string name="device_instant">瞬时保护</string>
    <string name="device_ground">接地保护</string>
    <string name="device_source1">Ⅰ电</string>
    <string name="device_source2">Ⅱ电</string>
    <string name="device_on">ON</string>
    <string name="device_off">OFF</string>
    <string name="device_protect_on">开启</string>
    <string name="device_protect_off">关闭</string>
    <string name="device_log_null">无运行趋势数据</string>
    <string name="device_modify">修改</string>
    <string name="device_modify_success">修改成功，等待刷新(10s)</string>
    <string name="device_modify_timeout">修改请求超时，请重试</string>
    <string name="device_modify_fail">修改失败，请重试</string>
    <string name="device_modify_refuse">请求已被拒绝</string>
    <string name="device_modify_local">当前设备模式为：【本地】，不可进行远程操作</string>
    <string name="device_modify_level">请求已被拒绝/当前用户身份为：【%1$s】, 不可进行参数修改/取消</string>
    <string name="device_modify_control">请求已被拒绝/当前用户身份为：【%1$s】, 不可进行远程合分闸操作/取消</string>
    <string name="device_modify_null">请稍后，数据尚未加载完成</string>
    <string name="device_modify_code">设备密码</string>
    <string name="device_modify_code_error">密码错误</string>
    <string name="device_local">已位于设备页中，无需跳转</string>
    <string name="device_A1_status">过载_短路_瞬动_接地_*_*_*_脱扣_触头磨损_超温_拒动_自诊断_*_欠相_MCR</string>
    <string name="device_A2_status">过载_短路_瞬动_接地_*_*_*_脱扣_触头磨损_超温_拒动_自诊断_*_欠相_MCR</string>
    <string name="device_A3_status">过载_短路_瞬动_接地_*_*_*_脱扣_触头磨损_超温_拒动_铁电_自诊断_电流不平衡_电压不平衡</string>
    <string name="device_M2_status">*_*_拒动_不平衡_*_*_*_*_过载_短路_瞬动_接地_热记忆_预过载_*_脱扣</string>
    <string name="device_T3_status">*_常电投入_常电故障_*_备电投入_备电故障</string>
    <string name="device_ATS_U">电压保护(%Un)</string>
    <string name="device_ATS_F">频率保护(%Fn)</string>
    <string name="device_ATS_Up">不平衡保护(%Un)</string>
    <string name="device_ATS_T">延时(s)</string>
    <string name="workorder_filter">筛选</string>
    <string name="workorder_done">完成</string>
    <string name="workorder_due">近期</string>
    <string name="workorder_overdue">逾期</string>
    <string name="workorder_time">%1$s至%2$s</string>
    <string name="workorder_id">工单ID</string>
    <string name="workorder_title">主旨</string>
    <string name="workorder_type">工单类型</string>
    <string name="workorder_task">任务详情</string>
    <string name="workorder_log">工单日志</string>
    <string name="workorder_log_tips">执行记录……</string>
    <string name="workorder_task_tips">建议多行区分任务点</string>
    <string name="workorder_range">建议时间</string>
    <string name="workorder_location">运维位置</string>
    <string name="workorder_worker">作业员</string>
    <string name="workorder_creator">创建人</string>
    <string name="workorder_to">至</string>
    <string name="workorder_save">创建工单</string>
    <string name="workorder_required">必填</string>
    <string name="workorder_nonull">必填项不能为空</string>
    <string name="workorder_range_error">起始时间不能晚于截止时间</string>
    <string name="workorder_fail">创建工单失败</string>
    <string name="workorder_picker_error">图片尺寸不符合规范</string>
    <string name="workorder_exit_confirm">正在执行的工单</string>
    <string-array name="workorder_types">
        <item>计划任务</item>
        <item>异常排查</item>
        <item>随工运维</item>
        <item>系统工单</item>
    </string-array>
    <string name="workorder_album">相册</string>
    <string name="workorder_camera">拍照</string>
    <string name="woekorder_system">系统工单</string>
    <string name="woekorder_sys_id">SYS</string>
    <string name="alarm_device">设备：%1$s</string>
    <string name="alarm_time">时间：%1$s</string>
    <string name="alarm_type">类型：%1$s</string>
    <string-array name="energy_tags">
        <item>日</item>
        <item>月</item>
        <item>年</item>
    </string-array>
    <string-array name="energy_analysis">
        <item>当前能耗</item>
        <item>环比同期</item>
        <item>环比值</item>
    </string-array>
    <string name="energy_pie_title">%1$s\n分支能耗 占比情况</string>
</resources>