<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_function" android:checkableBehavior="single">
        <item android:id="@+id/nav_overview"
            android:title="@string/nav_overview"
            android:icon="@drawable/nav_overview"/>
        <item android:id="@+id/nav_schedule"
            android:title="@string/nav_schedule"
            android:icon="@drawable/nav_schedule"/>
        <item android:id="@+id/nav_trend"
            android:title="@string/nav_trend"
            android:icon="@drawable/nav_trend"/>
        <item android:id="@+id/nav_alarm"
            android:title="@string/nav_alarm"
            android:icon="@drawable/nav_alarm"/>
        <item android:id="@+id/nav_energy"
            android:title="@string/nav_energy"
            android:icon="@drawable/nav_energy"/>
        <item android:id="@+id/nav_action"
            android:title="@string/nav_action"
            android:icon="@drawable/nav_action"/>
    </group>
    <group android:id="@+id/group_others">
        <item android:id="@+id/nav_setting"
            android:title="@string/nav_setting"
            android:icon="@drawable/nav_customize"/>
        <item android:id="@+id/nav_exit"
            android:title="@string/nav_exit"
            android:icon="@drawable/nav_exit"/>
    </group>
</menu>