<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/view_margin_normal"
    android:focusableInTouchMode="true"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_phone_number"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_code"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/btn_code"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/view_margin_tiny"
            android:text="@string/login_code_gain"
            android:textAlignment="center"
            android:textColor="@drawable/ic_phone_code"
            android:textSize="@dimen/font_big"
            android:background="@drawable/ic_phone_code" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_normal">
        <Button
            android:id="@+id/btn_login"
            style="@style/RadiusButton"
            android:text="@string/login_sign_in"/>
        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
    <TextView
        android:id="@+id/tv_change_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding_normal"
        android:layout_marginTop="@dimen/view_margin_small"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/login_account" />
</LinearLayout>